# focMotorController

./: #auto_saved_files#  .gitignore  DEVLOG.md  README.md  focMotorController.kicad_pcb  focMotorController.kicad_pro  focMotorController.kicad_sch  fp-lib-table  sym-lib-table
assets/: coordinate-systems.excalidraw
controller/: .gitignore  pyproject.toml
controller/src/: main.py  motor_sim.py  plot.py  transforms.py  util.py
controller/src/control/: __init__.py  foc.py  id.py  six_step.py  transforms.py
controller/src/motor_sim/: __init__.py  electrical_state.py  kinematic_state.py  properties.py
controller/testing/: backemf_graph.ipynb
footprints/: A16-1000.kicad_mod  IR2104SPBF.kicad_mod  IR2104SPBF.step  STP55NF06L.kicad_mod  STPS20L15D.kicad_mod  STPS20L15D.step  TC4420EPA.kicad_mod  WJ128V-5.0-2P.kicad_mod
jlcpcb/: project.db
jlcpcb/gerber/: focMotorController-CuBottom.gbr  focMotorController-CuIn1.gbr  focMotorController-CuIn2.gbr  focMotorController-CuTop.gbr  focMotorController-EdgeCuts.gbr  focMotorController-MaskBottom.gbr  focMotorController-MaskTop.gbr  focMotorController-NPTH.drl  focMotorController-PTH.drl  focMotorController-SilkBottom.gbr  focMotorController-SilkTop.gbr
jlcpcb/production_files/: BOM-focMotorController.csv  CPL-focMotorController.csv
symbols/: ResettableFuses.kicad_sym  STP55NF06L.kicad_sym  TC4420EPA.kicad_sym  WJ128V-5.0-2P.kicad_sym  WJ128V-5.0-3P.kicad_sym
