[project]
name = "controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dearpygui>=2.1.0",
    "glfw>=2.9.0",
    "imgui>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
controller = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
